--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-UNDER CONSTRUCTION
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <title>Roblox Academy Search Engine</title>
+  </head>
+  <body>
+    
+  </body>
+</html>
