--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Roblox Academy Search Engine</title>
   </head>
   <body>
-<form id="frmSearch" class="search2" method="get" action="default.html" />
+<form id="frmSearch" class="search2" method="get" action="index.html" />
 <input class="search2" id="txtSearch" type="text" name="serach_bar" size="31" maxlength="255"       
 value="" style="left: 396px; top: 153px; width: 293px; height: 26px;" />
 <input class="search1" type="submit" name="submition" value="Search" style=" padding-  
