--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
     <title>Roblox Academy Search Engine</title>
   </head>
   <body>
-<form id="frmSearch" class="search2" method="get" action="index.html" />
-<input class="search2" id="txtSearch" type="text" name="serach_bar" size="31" maxlength="255"       
-value="" style="left: 396px; top: 153px; width: 293px; height: 26px;" />
-<input class="search1" type="submit" name="submition" value="Search" style=" padding-  
-bottom:20px; left: 691px; top: 153px; height: 23px" />
-<input class="search2" type="hidden" name="sitesearch" value="default.html" />
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js" integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous"></script>
+    <center>
+      <form id="frmSearch" class="search2" method="get" action="index.html" />
+      <input class="search2" id="txtSearch" type="text" name="serach_bar" size="31" maxlength="255" value="" style="left: 396px; top: 153px; width: 293px; height: 26px;" />
+      <input class="search1" type="submit" name="submition" value="Search" style=" padding-bottom:20px; left: 691px; top: 153px; height: 23px" />
+      <input class="search2" type="hidden" name="sitesearch" value="default.html" />
+    </center>
   </body>
 </html>
